Feat(eos_designs): Add `ptp_settings` to replace `ptp` key in eos_designs (#4155)
Co-authored-by: Laxmikant Chintakindi <laxmikant.c-ext@Laxmikants-MacBook-Pro.local>
Co-authored-by: Claus Holbech <holbech@arista.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/ptp-tests-leaf2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/ptp-tests-leaf2.yml
@@ -1,5 +1,10 @@
 ---
 # Test that auto_clock_identify: false works on a global level:
-ptp:
+ptp_settings:
   enabled: true
   auto_clock_identity: false
+
+# Test `ptp_settings` setting overrides  `ptp` setting.
+ptp:
+  enabled: false
+  auto_clock_identity: true
