--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-custom-control-plane-policy-pathfinder-1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-custom-control-plane-policy-pathfinder-1.yml
@@ -525,6 +525,9 @@ metadata:
           preference: alternate
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - APP-PROFILE-CONTROL-PLANE
+        - VIDEO
       - id: 3
         name: DEFAULT-POLICY-VIDEO
         pathgroups:
@@ -534,6 +537,9 @@ metadata:
           preference: preferred
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - APP-PROFILE-CONTROL-PLANE
+        - VIDEO
       - id: 1
         name: DEFAULT-POLICY-DEFAULT
         pathgroups:
@@ -543,6 +549,9 @@ metadata:
           preference: alternate
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - APP-PROFILE-CONTROL-PLANE
+        - VIDEO
     - name: PROD
       vni: 42
       avts:
@@ -555,6 +564,8 @@ metadata:
           preference: preferred
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - VIDEO
       - id: 1
         name: DEFAULT-POLICY-DEFAULT
         pathgroups:
@@ -564,6 +575,8 @@ metadata:
           preference: alternate
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - VIDEO
     - name: IT
       vni: 14
       avts:
@@ -576,6 +589,8 @@ metadata:
           preference: preferred
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - VIDEO
       - id: 1
         name: DEFAULT-POLICY-DEFAULT
         pathgroups:
@@ -585,6 +600,8 @@ metadata:
           preference: alternate
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - VIDEO
   cv_tags:
     device_tags:
     - name: Role
