Feat(eos_cli_config_gen): Add dscp support for application traffic recognition IPv4 (#4241)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -241,8 +241,12 @@ application traffic recognition
    application ipv4 CUSTOM-APPLICATION-2
       protocol tcp source port field-set TCP-SRC-2 destination port field-set TCP-DEST-2
    !
+   application ipv4 CUSTOM-DSCP-APPLICATION
+      dscp ef 12-14 cs6 42
+   !
    category VIDEO1
       application CUSTOM-APPLICATION-2
+      application CUSTOM-DSCP-APPLICATION
       application microsoft-teams
    !
    application-profile APP-PROFILE-CONTROL-PLANE
