Test(eos_cli_config_gen): Added test in molecule for cvx to improve the coverage

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/cvx-2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/cvx-2.cfg
@@ -2,20 +2,19 @@
 !
 transceiver qsfp default-mode 4x10G
 !
-hostname cvx
+hostname cvx-2
 !
 no enable password
 no aaa root
 !
 cvx
-   no shutdown
+   shutdown
    peer host 1.1.1.1
    peer host 2.2.2.2
    service mcs
-      no shutdown
+      shutdown
    service vxlan
-      no shutdown
-      vtep mac-learning control-plane
+      shutdown
 !
 interface Management1
    description oob_management
