--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/cvx-3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/cvx-3.cfg
@@ -2,19 +2,17 @@
 !
 transceiver qsfp default-mode 4x10G
 !
-hostname cvx
+hostname cvx-3
 !
 no enable password
 no aaa root
 !
 cvx
-   no shutdown
-   peer host 1.1.1.1
-   peer host 2.2.2.2
+   peer host 1.1.1.2
+   peer host 2.2.2.1
    service mcs
-      no shutdown
+      redis password 7 070E334ddD1D18
    service vxlan
-      no shutdown
       vtep mac-learning control-plane
 !
 interface Management1
