--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/cvx-4.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/cvx-4.cfg
@@ -2,20 +2,16 @@
 !
 transceiver qsfp default-mode 4x10G
 !
-hostname cvx
+hostname cvx-4
 !
 no enable password
 no aaa root
 !
 cvx
-   no shutdown
-   peer host 1.1.1.1
-   peer host 2.2.2.2
+   peer host 1.1.1.3
+   peer host 2.2.2.3
    service mcs
-      no shutdown
-   service vxlan
-      no shutdown
-      vtep mac-learning control-plane
+      shutdown
 !
 interface Management1
    description oob_management
