--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/cvx-5.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/cvx-5.cfg
@@ -2,20 +2,14 @@
 !
 transceiver qsfp default-mode 4x10G
 !
-hostname cvx
+hostname cvx-5
 !
 no enable password
 no aaa root
 !
 cvx
-   no shutdown
-   peer host 1.1.1.1
-   peer host 2.2.2.2
-   service mcs
-      no shutdown
-   service vxlan
-      no shutdown
-      vtep mac-learning control-plane
+   peer host 1.1.1.4
+   peer host 2.2.2.4
 !
 interface Management1
    description oob_management
