--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/cvx.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/cvx.yml
@@ -6,6 +6,9 @@ cvx:
   - 2.2.2.2
   services:
     mcs:
+      redis:
+        password: 070E334ddD1D18
+        password_type: 7
       shutdown: false
     vxlan:
       shutdown: false
