Feat(eos_cli_config_gen): Add ptp profiles for ITU-T G8275 support (#4230)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ptp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ptp.cfg
@@ -8,6 +8,7 @@ ptp clock-identity 11:11:11:11:11:11
 ptp source ip 1.1.2.3
 ptp priority1 101
 ptp priority2 102
+ptp profile g8275.1
 ptp ttl 12
 ptp domain 17
 ptp message-type general dscp 36 default
@@ -38,6 +39,7 @@ interface Port-Channel5
    mlag 5
    ptp enable
    ptp mpass
+   ptp profile g8275.1 destination mac-address forwardable
    ptp delay-mechanism e2e
    ptp sync-message interval 1
    ptp role dynamic
@@ -72,6 +74,7 @@ interface Ethernet6
    ptp transport ipv4
    ptp announce timeout 9
    ptp delay-req interval -7
+   ptp profile g8275.1 destination mac-address non-forwardable
    ptp role dynamic
 !
 interface Management1
