--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ptp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ptp.yml
@@ -16,6 +16,7 @@ ptp:
   mode: boundary
   mode_one_step: true
   forward_unicast: true
+  profile: "g8275.1"
   monitor:
     # enabled: true (default)
     threshold:
@@ -53,6 +54,9 @@ port_channel_interfaces:
       role: dynamic
       vlan: 2
       transport: layer2
+      profile:
+        g8275_1:
+          destination_mac_address: forwardable
 
 ### interface
 ethernet_interfaces:
@@ -91,6 +95,9 @@ ethernet_interfaces:
         interval: 1
       role: dynamic
       transport: ipv4
+      profile:
+        g8275_1:
+          destination_mac_address: non-forwardable
 # port-channel interfaces
   - name: Ethernet5
     type: port-channel-member
