Rerun molecule after rebase

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-custom-control-plane-policy-pathfinder-1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-custom-control-plane-policy-pathfinder-1.yml
@@ -438,6 +438,8 @@ metadata:
         user_defined_applications:
         - name: CUSTOM-APPLICATION-2
           category: VIDEO1
+        - name: CUSTOM-DSCP-APPLICATION
+          category: VIDEO1
     role: pathfinder
     ssl_profile: profileA
     vtep_ip: 192.168.144.1
