--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -515,6 +515,12 @@ all:
                           ansible_host: 192.168.200.120
                         DC1.L2LEAF5B:
                           ansible_host: 192.168.200.121
+                    DC1_L2LEAF6:
+                      hosts:
+                        DC1.L2LEAF6A:
+                          ansible_host: 192.168.200.122
+                        DC1.L2LEAF6B:
+                          ansible_host: 192.168.200.123
                     TESTS:
                       hosts:
                         mgmt_interface_default:
