--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
@@ -413,6 +413,8 @@ application_traffic_recognition:
     applications:
     - name: CUSTOM-APPLICATION-1
     - name: skype
+    application_transports:
+    - rtp
   - name: VOICE
     applications:
     - name: CUSTOM-VOICE-APPLICATION
@@ -500,6 +502,8 @@ metadata:
         - name: CUSTOM-APPLICATION-1
         categories:
         - category: VIDEO1
+        transport_protocols:
+        - rtp
       - name: VOICE
         builtin_applications:
         - name: CUSTOM-VOICE-APPLICATION
