--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-custom-control-plane-policy-pathfinder-1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-custom-control-plane-policy-pathfinder-1.cfg
@@ -206,6 +206,7 @@ application traffic recognition
    application-profile VIDEO
       application CUSTOM-APPLICATION-1
       application skype
+      application rtp transport
       category VIDEO1
    !
    field-set ipv4 prefix CUSTOM-DEST-PREFIX-1
