--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -488,6 +488,7 @@ application traffic recognition
    application-profile VIDEO
       application CUSTOM-APPLICATION-1
       application skype
+      application rtp transport
       category VIDEO1
    !
    application-profile VOICE
