--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -595,6 +595,9 @@ application_classification:
         - name: CUSTOM-APPLICATION-1
         # Builtin application that should not raise
         - name: skype
+      # application transport to also be covered by the profile
+      application_transports:
+        - rtp
     - name: IT
     - name: MPLS-ONLY
     - name: VOICE
