--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -257,6 +257,7 @@ application traffic recognition
    application-profile VIDEO
       application CUSTOM-APPLICATION-1
       application skype
+      application rtp transport
       category VIDEO1
    !
    application-profile VOICE
