--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
@@ -448,6 +448,8 @@ application_traffic_recognition:
     applications:
     - name: CUSTOM-APPLICATION-1
     - name: skype
+    application_transports:
+    - rtp
   - name: VOICE
     applications:
     - name: CUSTOM-VOICE-APPLICATION
@@ -535,6 +537,8 @@ metadata:
         - name: CUSTOM-APPLICATION-1
         categories:
         - category: VIDEO1
+        transport_protocols:
+        - rtp
       - name: VOICE
         builtin_applications:
         - name: CUSTOM-VOICE-APPLICATION
