Added tests for traffic policies

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies.cfg
@@ -39,6 +39,7 @@ traffic-policies
          source prefix 10.0.0.0/8 192.168.0.0/16
          destination prefix field-set DEMO-01
          protocol tcp source port 1,10-20
+         protocol udp flags initial source port field-set SERVICE-DEMO
          ttl 10, 20-30
          actions
             set traffic class 5
@@ -55,7 +56,7 @@ traffic-policies
       !
       match BLUE-C1-POLICY-03 ipv4
          source prefix field-set DEMO-01
-         protocol icmp
+         protocol icmp type echo echo-reply code all
          fragment offset 1124, 2000-2010
          actions
             count DROP-PACKETS
@@ -81,6 +82,27 @@ traffic-policies
             set traffic class 5
          !
       !
+      match BLUE-C1-POLICY-06 ipv4
+         protocol neighbors bgp
+         protocol udp destination port 1,10-20
+         protocol tcp flags initial source port 22
+         protocol icmp
+         !
+      !
+      match BLUE-C1-POLICY-07 ipv4
+         destination prefix 10.0.0.0/8 192.168.0.0/16
+         !
+      !
+      match BLUE-C1-POLICY-08 ipv4
+         destination prefix 10.0.0.0/8 192.168.0.0/16
+         destination prefix field-set DEMO-01
+         protocol udp flags initial destination port 1,10-20
+         protocol tcp destination port field-set SERVICE-DEMO
+         !
+      !
+      match ipv4-all-default ipv4
+         actions
+            drop
    !
    traffic-policy BLUE-C2-POLICY
       counter DEMO-TRAFFIC
@@ -106,13 +128,43 @@ traffic-policies
          protocol tcp
          actions
             drop
-            log
          !
       !
       match ipv4-all-default ipv4
          actions
             drop
             log
+   !
+   traffic-policy BLUE-C3-POLICY
+      match ipv4-all-default ipv4
+         actions
+            count test
+            set traffic class 10
+            set dscp 11
+   !
+   traffic-policy BLUE-C4-POLICY
+      match ipv6-all-default ipv6
+         actions
+            count test
+            set traffic class 10
+            set dscp 11
+   !
+   traffic-policy BLUE-C5-POLICY
+      match ipv6-all-default ipv6
+         actions
+            drop
+            log
+   !
+   traffic-policy BLUE-C6-POLICY
+      match ipv6-all-default ipv6
+         actions
+            drop
+   !
+   traffic-policy BLUE-C7-POLICY
+      match BLUE-C7-POLICY-01 ipv4
+         protocol neighbors bgp
+         !
+      !
    !
 !
 end
