--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/traffic-policies.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/traffic-policies.yml
@@ -21,51 +21,6 @@ traffic_policies:
         ipv4:
           drop: true
       matches:
-        - name: POLICY-WITHOUT-SOURCE
-          type: ipv4
-          protocols:
-            - protocol: neighbors
-            - protocol: ip
-            - protocol: udp
-              dst_port: "1,10-20"
-            # - protocol: tcp
-            #   dst_field: SERVICE-DEMO
-              
-            - protocol: tcp
-              src_port: "22"
-              flags:
-                - initial
-              icmp_type:
-                - echo
-                - echo-reply
-            - protocol: icmp
-              src_field: SERVICE-DEMO
-              flags:
-                - initial
-              
-          actions:
-            log: false
-        - name: POLICY-WITH-DEST-PREFIX
-          type: ipv4
-          destination:
-            prefixes:
-              - 10.0.0.0/8
-              - 192.168.0.0/16
-        - name: POLICY-WITH-DEST-PREFIX-AND-LIST
-          type: ipv4
-          destination:
-            prefixes:
-              - 10.0.0.0/8
-              - 192.168.0.0/16
-            prefix_lists:
-              - DEMO-01
-          protocols:
-            - protocol: udp
-              dst_port: "1,10-20"
-              flags:
-                - initial
-            - protocol: tcp
-              dst_field: SERVICE-DEMO
         - name: BLUE-C1-POLICY-01
           type: ipv4
           source:
@@ -145,6 +100,47 @@ traffic_policies:
           fragment:
           actions:
             traffic_class: 5
+        - name: BLUE-C1-POLICY-06
+          type: ipv4
+          protocols:
+            - protocol: neighbors
+            - protocol: ip
+            - protocol: udp
+              dst_port: "1,10-20"
+            - protocol: tcp
+              src_port: "22"
+              flags:
+                - initial
+              icmp_type:
+                - echo
+                - echo-reply
+            - protocol: icmp
+              src_field: SERVICE-DEMO
+              flags:
+                - initial
+          actions:
+            log: false
+        - name: BLUE-C1-POLICY-07
+          type: ipv4
+          destination:
+            prefixes:
+              - 10.0.0.0/8
+              - 192.168.0.0/16
+        - name: BLUE-C1-POLICY-08
+          type: ipv4
+          destination:
+            prefixes:
+              - 10.0.0.0/8
+              - 192.168.0.0/16
+            prefix_lists:
+              - DEMO-01
+          protocols:
+            - protocol: udp
+              dst_port: "1,10-20"
+              flags:
+                - initial
+            - protocol: tcp
+              dst_field: SERVICE-DEMO
     - name: BLUE-C2-POLICY
       default_actions:
         ipv4:
@@ -191,6 +187,27 @@ traffic_policies:
           count: test
           traffic_class: 10
           dscp: 11
+    - name: BLUE-C4-POLICY
+      default_actions:
+        ipv6:
+          count: test
+          traffic_class: 10
+          dscp: 11
+    - name: BLUE-C5-POLICY
+      default_actions:
+        ipv6:
+          drop: true
+          log: true
+    - name: BLUE-C6-POLICY
+      default_actions:
+        ipv6:
+          drop: true
+    - name: BLUE-C7-POLICY
+      matches:
+        - name: BLUE-C7-POLICY-01
+          type: ipv4
+          protocols:
+            - protocol: neighbors
 ethernet_interfaces:
   - name: Ethernet1
     type: routed
