--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1B.cfg
@@ -149,14 +149,18 @@ interface Ethernet12
    ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet12 out
 !
 interface Ethernet13
+   no shutdown
+   no switchport
+!
+interface Ethernet13.10
    description test l3 interfaces acls
    no shutdown
    mtu 9000
-   no switchport
+   encapsulation dot1q vlan 10
    vrf Tenant_A_L3_VRF_Zone
    ip address 10.10.50.20/24
-   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet13 in
-   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet13 out
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet13.10 in
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet13.10 out
 !
 interface Ethernet4000
    description My second test
@@ -224,14 +228,14 @@ ip virtual-router mac-address 00:dc:00:00:00:0a
 ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet12
    15 deny ip any host 10.10.50.10
 !
-ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet13
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet13.10
    15 deny ip any host 10.10.50.20
 !
 ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet12
    remark Some remark will not require source and destination fields.
    permit ip host 10.10.50.10 any
 !
-ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet13
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet13.10
    remark Some remark will not require source and destination fields.
    permit ip host 10.10.50.20 any
 !
