--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
@@ -5,35 +5,49 @@ router_isis:
   router_id: 192.168.255.3
   is_type: level-2
   log_adjacency_changes: true
-  mpls_ldp_sync_default: true
+  mpls_ldp_sync_default: false
+  spf_interval:
+    interval: 250
   timers:
     local_convergence:
       protected_prefixes: true
       delay: 15000
   advertise:
     passive_only: true
+  redistribute_routes:
+    - source_protocol: bgp
+      route_map: RM-BGP
   address_family_ipv4:
     maximum_paths: 2
   segment_routing_mpls:
-    enabled: true
+    enabled: false
+    prefix_segments:
+      - prefix: 155.2.1.19/32
+        index: 2121
+  set_overload_bit:
+    on_startup:
+      wait_for_bgp:
+        enabled: true
   authentication:
     both:
       key_type: 0
       key: password
-      mode: sha
-      sha:
-        key_id: 4
+      rx_disabled: true
     level_1:
       key_type: 0
       key: password
-      mode: md5
+      mode: sha
+      sha:
+        key_id: 5
       rx_disabled: true
     level_2:
       key_type: 0
       key: password
-      mode: sha
-      sha:
-        key_id: 2
+      mode: shared-secret
+      shared_secret:
+        profile: test2
+        algorithm: md5
+      rx_disabled: true
   eos_cli: |-
     address-family ipv6 unicast
       multi-topology
