Add test with two keys

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/MLAG_OSPF_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/MLAG_OSPF_TESTS.yml
@@ -5,6 +5,8 @@ underlay_ospf_authentication:
   message_digest_keys:
     - id: 1
       key: arista123arista123
+    - id: 2
+      key: muchbettersecret_remember_to_vault_this
 
 type: l3leaf
 
