--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/dhcp-servers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/dhcp-servers.yml
@@ -11,7 +11,16 @@ dhcp_servers:
             string: "test"
           - code: 66
             array_ipv4_address: [1.1.1.1, 2.2.2.2]
+          - code: 70
     disabled: false
+    lease_time_ipv4:
+      days: 10
+      hours: 10
+      minutes: 10
+    lease_time_ipv6:
+      days: 12
+      hours: 12
+      minutes: 12
     dns_domain_name_ipv4: testv4.com
     dns_domain_name_ipv6: testv6.com
     subnets:
@@ -30,6 +39,17 @@ dhcp_servers:
           hours: 0
           minutes: 10
         default_gateway: 10.0.0.1
+        reservations:
+          - mac_address: 1a1b.1c1d.1e1f
+            hostname: host1
+            ipv4_address: 10.0.0.1
+          - mac_address: 0001.0001.0001
+            hostname: host3
+            ipv4_address: 10.0.0.2
+      - subnet: 2001:db8:abcd:1234:c000::/66
+        reservations:
+          - mac_address: 0003.0003.003
+            ipv6_address: 2001:db8:abcd:1234:c000::1
 
   - vrf: default
     dns_servers_ipv4:
@@ -59,3 +79,6 @@ dhcp_servers:
     subnets:
       - subnet: 172.16.254.0/24
         default_gateway: 172.16.254.1
+    eos_cli: |-
+      dns server ipv4 10.0.0.1 192.168.255.254
+      client class ipv4 definition Class1
