Test: Use valid length in molecule for OSPF message-digest-key

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/MLAG_OSPF_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/MLAG_OSPF_TESTS.yml
@@ -4,9 +4,9 @@ underlay_ospf_authentication:
   enabled: true
   message_digest_keys:
     - id: 1
-      key: arista123arista123
+      key: arista123arista
     - id: 2
-      key: muchbettersecret_remember_to_vault_this
+      key: please_vault_me
 
 type: l3leaf
 
