--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies-3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies-3.cfg
@@ -2,12 +2,12 @@
 !
 transceiver qsfp default-mode 4x10G
 !
-hostname traffic-policies-2
+hostname traffic-policies-3
 !
 no enable password
 no aaa root
 !
-interface Port-Channel2
+interface Ethernet1
    no switchport
 !
 interface Management1
@@ -16,8 +16,5 @@ interface Management1
    ip address 10.73.255.122/24
 !
 traffic-policies
-   field-set ipv6 prefix IPv6-Demo
-      11:22:33:44:55:66:77:88
-   !
 !
 end
